update content style

--- a/src/containers/style.css
+++ b/src/containers/style.css
@@ -16,3 +16,11 @@
 .item{
   padding: 0 8px;
 }
+
+.content {
+  max-width: 700px;
+  background: #444;
+  min-height: 80%;
+  margin: 0 auto;
+  padding: 20px;
+}
