字体大小屏幕自适应

--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,13 @@ html, body{
   color: rgb(188, 172, 143);
   font-family: SFMono-Regular, Consolas, "Liberation Mono", Menlo, Courier, monospace, sans-serif;
 }
+
+div, span, p{
+  font-size:20px
+}
+
+@media screen and (max-width: 500px){/* 可视区域小于 850px, 设置更小font-size属性 */
+   div, span, p{
+     font-size:16px;
+   }
+}
