--- a/src/App.css
+++ b/src/App.css
@@ -16,3 +16,11 @@ div, span, p{
      font-size:16px;
    }
 }
+
+.content {
+  max-width: 700px;
+  background: #111;
+  min-height: 80%;
+  margin: 0 auto;
+  padding: 20px;
+}
