更新跳转样式

--- a/src/containers/style.css
+++ b/src/containers/style.css
@@ -15,12 +15,16 @@
 }
 .item{
   padding: 0 8px;
+  cursor: pointer;
 }
 
 .content {
   max-width: 700px;
-  background: #111;
   min-height: 80%;
   margin: 0 auto;
   padding: 20px;
+}
+
+.nodr {
+  text-decoration: none;
 }
